# life-log

./: .gitignore  pyproject.toml  tags
enq/: main.py
enq/assets/: default_config.toml
enq/cli/: args.py
enq/core/: config.py  entry.py
enq/database/: connection.py
lifelog/: __init__.py  main.py
lifelog/ai/: base.py
lifelog/assets/: default_config.toml
lifelog/cli/: args.py  editor.py  interface.py  menu.py
lifelog/core/: config.py  constants.py  entry.py  logger.py  tagging.py
lifelog/storage/: database.py  file.py
mypy_diary/: __main__.py  extra.py  main.py  types.py
mypy_diary/assets/: default_config.toml
mypy_diary/cli/: arg_parser.py  args.py
mypy_diary/core/: config.py  editor.py  handler.py  logger.py
mypy_diary/database/: connection.py
scripts/setup/: dev.sh  tags.sh
