[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enq"
version = "0.0.1"
requires-python = ">3.13.0"
dependencies = [
    "platformdirs>=4.5.1",
    "ruff>=0.14.14",
]

[project.scripts]
# This line creates the "magic" command:
# command_name = "package.file:function_name"
enq = "enq.main:main"

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
