[build-system]
requires = ["setuptools", "wheel", "hatchling"]
#build-backend = "setuptools.build_meta"
build-backend = "hatchling.build"

[project]
name = "lifelog"
version = "0.1.0a1"
requires-python = ">3.13.0"
dependencies = [
    "platformdirs>=4.5.1",
    "questionary>=2.1.1",
    "ruff>=0.14.14",
    "simple-term-menu>=1.6.6",
]

[project.scripts]
# This line creates the "magic" command:
# command_name = "package.file:function_name"
lifelog = "lifelog.main:main"

[dependency-groups]
dev = [
    "python-dotenv>=1.2.1",
    "ruff>=0.14.13",
]

[tool.hatch.build.targets.wheel]
packages = ["lifelog"]

[tool.hatch.build]
# This tells Hatch: "When you build, include these patterns"
include = [
    "lifelog/**/*.py",
    "lifelog/**/*.sql",
    "lifelog/**/*.toml",
]
